--- a/projectAgri/package.json
+++ b/projectAgri/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.10.12",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2"
   }
 }
