--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mongoose": "^5.10.12",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.1.2"
   }
 }
