--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
+    "flash": "^1.1.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.10.12",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
